2010-02-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	* gtk-gui/MonoDevelop.CSharp.Formatting.FormattingPanelWidget.cs:
	  Worked on 'Bug 583014 - Need a way to stop override
	  generating base call'.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/Statements/LockStatement.cs:
	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Dom/Statements/TryCatchStatement.cs:
	* MonoDevelop.CSharp.Formatting/CSharpFormattingPolicy.cs:
	* gtk-gui/MonoDevelop.CSharp.Formatting.FormattingPanelWidget.cs:
	  Worked on formatting visitor/dom.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: fixed failing
	  unit test.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/Statements/ForStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/WhileStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/IfElseStatement.cs:
	* MonoDevelop.CSharp.Dom/Statements/ForeachStatement.cs:
	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Formatting/CSharpFormattingPolicy.cs:
	* MonoDevelop.CSharp.Dom/Expressions/PrimitiveExpression.cs:
	* MonoDevelop.CSharp.Dom/Expressions/InvocationExpression.cs:
	* MonoDevelop.CSharp.Dom/Expressions/ConditionalExpression.cs:
	  Worked on DOM & formatting visitor.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/NewOverrideCompletionData.cs:
	  Fixed 'Bug 583014 - Need a way to stop override generating
	  base call'.

2010-02-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/CSharpAmbience.cs: Fixed 'Bug 583006
	  - Enum members are prefixed with an enum name, in the
	  Document Outline pad' / applied patch from Alexander
	  Cherniuk <ts33kr@gmail.com>
